@@ -1,4 +1,5 @@
 0.2.4
+Go to definition now searches current file first.
 Added 'Add to Custom Word List" to popup when text is selected.
 Added 'Check For Updates' option to prefs.
 Added support for custom word completions.
